# groupme-archive-parse

./: pyproject.toml
src/: main.py  wc_gen.py  wordcloud_generate.py
src/models/: __init__.py
src/static/: conversation.json  poll.json
src/static/likes/: everyone.json  for_me.json  mine.json
